Improve performance of primitive lists